Revision history for {{$dist->name}}

{{$NEXT}}

0.005     2013-10-26 01:31:06Z (Karen Etheridge)
          - set minimum version prereq for Module::Metadata

0.004     2013-10-24 04:17:27Z (Karen Etheridge)
          - fixes for Dist::Zilla 5.x, where we need to set the binmode on the
            fh before opening to the encoded content (we are still compatible
            with older Dist::Zilla as well)

0.003     2013-10-18 01:13:36Z (Karen Etheridge)
          - properly handle .pm files that don't exist on disk yet (e.g.
            ::Conflicts)

0.002     2013-10-17 02:58:11Z (Karen Etheridge)
          - skip checking develop prereqs, (it is not horrible for a plugin or
            bundle to list itself as a develop prereq)

0.001     2013-10-14 02:15:52Z (Karen Etheridge)
          - Initial release.