@@ -7,24 +7,63 @@ use Test::DZil;
 use Test::Fatal;
 use Path::Tiny;
 
-my $tzil = Builder->from_config(
-    { dist_root => 't/does_not_exist' },
+{
+    package inc::Provider;
+    use Moose;
+    with 'Dist::Zilla::Role::MetaProvider';
+    sub metadata
     {
-        add_files => {
-            'source/dist.ini' => simple_ini(
-                'GatherDir',
-                'CheckSelfDependency',
-                [ 'Prereqs / DevelopRequires' => { 'Foo::Bar' => '1.23' } ],
-            ),
-            path(qw(source lib Foo Bar.pm)) => "package Foo::Bar;\n1;\n",
-        },
-    },
-);
+        return {
+            provides => {
+                'Foo::Bar' => { file => 'lib/Foo/Bar.pm', version => '0' },
+            },
+        };
+    }
+}
 
-is(
-    exception { $tzil->build },
-    undef,
-    'build is not aborted',
-);
+{
+    my $tzil = Builder->from_config(
+        { dist_root => 't/does_not_exist' },
+        {
+            add_files => {
+                'source/dist.ini' => simple_ini(
+                    'GatherDir',
+                    'CheckSelfDependency',
+                    [ 'Prereqs / DevelopRequires' => { 'Foo::Bar' => '1.23' } ],
+                ),
+                path(qw(source lib Foo Bar.pm)) => "package Foo::Bar;\n1;\n",
+            },
+        },
+    );
+
+    like(
+        exception { $tzil->build },
+        qr{Foo::Bar is listed as a prereq, but is also provided by this dist \(lib/Foo/Bar.pm\)!},
+        'build is aborted - develop prereq not listed in "provides"',
+    );
+}
+
+{
+    my $tzil = Builder->from_config(
+        { dist_root => 't/does_not_exist' },
+        {
+            add_files => {
+                'source/dist.ini' => simple_ini(
+                    'GatherDir',
+                    'CheckSelfDependency',
+                    [ 'Prereqs / DevelopRequires' => { 'Foo::Bar' => '1.23' } ],
+                    [ '=inc::Provider' ],
+                ),
+                path(qw(source lib Foo Bar.pm)) => "package Foo::Bar;\n1;\n",
+            },
+        },
+    );
+
+    is(
+        exception { $tzil->build },
+        undef,
+        'build is not aborted - develop prereq listed in "provides"',
+    );
+}
 
 done_testing;
